--- a/css/categoryOfDonation.css
+++ b/css/categoryOfDonation.css
@@ -4,6 +4,8 @@ body {
     color: white;
     font-family: 'Rubik', sans-serif;
     background-size: cover;
+    background-size: 100% 100%;
+    background-attachment: fixed;
   }
 
 #top_container{
