--- a/css/money.css
+++ b/css/money.css
@@ -2,8 +2,35 @@ body{
     text-align: center;
     font-family: 'Rubik', sans-serif;
     color:#01587A;
-    background-image: linear-gradient(#f2b900,#DD9941);
+    background-image:  linear-gradient(#3f82d8 10%,#01587A 90%)/*linear-gradient(#01587A 80%,#DD9941 20%)*/;
+    font-size: 20px;
+    background-size: cover;
+    background-size: 100% 100%;
+    background-attachment: fixed;
 }
-#div{
-    background-color: #98D7DC;
+#money{
+    background-image: linear-gradient(#5CB2C0,#8dd7e3);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding:20px;
+    border-radius: 15px;
 }
+#submmiting{
+    background-color: #5CB2C0;
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    transition-duration: 0.4s;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size:20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-color:#5CB2C0 ;
+    border-radius: 5px;
+}
+#submmiting:hover{
+    box-shadow: 0 12px 16px 0 #5CB2C0, 0 17px 50px 0 #b6f1fa;
+} 
