--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -1,12 +1,144 @@
-body {
+/*animations*/
+@keyframes enterScreen {
+    from {top: 100%;}
+    to {top: 0%;}
+}
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     font-family: 'Rubik', sans-serif;
+}
+#mainNav .logo img{
+    height: 100px;
+}
+
+#mainNav{
+    font-weight: bold;
+    direction: ltr;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 16px;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    background-image: linear-gradient(90deg,#01587A,#062e3d);
+    z-index: 2;
+}
+
+#mainNav ul{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    width: 400px;
+    justify-content: space-around;
+}
+
+#mainNav ul li a{
+    text-decoration: none !important;
+    font-size: 150%;
+    color: #F0F0F0;
+}
+
+/*dropdown menu*/
+.droplink {
+    cursor: pointer;
   }
-#description{
-    background-color: chartreuse;
-}
-#home_button{
-    background-color: blueviolet;
-}
-.home_page_button{
-    background-color: crimson;
-}
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #5CB2C0;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: #98D7DC !important;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  /*sections*/
+  #section2{
+    background-image: url("/media/mainPageSection1BG.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 721px;
+    display: flex;
+    align-items: start;
+    
+  }
+  #section1{
+    background-image: linear-gradient(#F2B900,#DD9941);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 710px;
+  }
+
+  /*section-divs*/
+  #logoImage{
+    position: absolute;
+    margin-top: 8%;
+    height: 100%;
+    width: 100%;
+    animation-name: enterScreen;
+    animation-duration: 2s; 
+    animation-iteration-count: 1;
+  }
+
+  #logoImage img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: 80%;
+  }
+
+  #information{
+    padding: 50px;
+    width: 50%;
+    background-image: linear-gradient(#F2B900,#DD9941);
+    height: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    text-align: center;
+    margin: auto;
+    border-radius: 15px;
+    font-size: 35px;
+    color: #01587A;
+    box-shadow: 10px 10px 35px rgb(144, 91, 31);
+  }
+
+  /*Scroll Bar*/
+::-webkit-scrollbar {
+    width: 8px;
+    height: 100%;
+    background-color:#a2b8c0;
+  } 
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(51, 71, 106);
+    border-radius: 10px;
+  }
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(27, 36, 65); 
+  }
